initiaite user authentication process
